--- a/styles/style.css
+++ b/styles/style.css
@@ -8,16 +8,6 @@ html {
   block-size: 100%;
 }
 
-.page {
-  inline-size: 1200px;
-  block-size: 100%;
-  margin: auto;
-  color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
-  font-size: 18px;
-  background-color: #1b1919;
-}
-
 h1,
 h2,
 h3,
@@ -62,14 +52,15 @@ ol {
 
 .page {
   display: flex;
-  justify-content: center;
+/*  justify-content: center;*/
   align-items: center;
-  background-color: #1B1919;
+  background-color:#1B1919;
   margin: auto;
   inline-size: 1200px;
   block-size: 100%;
+  color: #fff;
   font-family: "Fira Sans Condensed", sans-serif;
-
+  font-size: 18px;
 }
 
 .content {
@@ -81,11 +72,18 @@ ol {
 }
 
 /*левая часть*/
+/*.result {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}*/
+
 .result__video-container {
-  position: relative;
   width: 711px;
   height: 386px;
-  margin-bottom: 28px;
+  position: relative;
+  overflow: hidden;
+  margin-bottom: 20px;
 }
 
 .result__video {
@@ -108,7 +106,8 @@ ol {
 .search-form__fieldset-title {
   font-weight: 400;
   font-size: 18px;
-  line-height: 100%;
+  line-height: 1;
+  margin-bottom: 6px;
 }
 
 .search-form__label {
@@ -120,9 +119,10 @@ ol {
 }
 
 .search-form__textfield {
+  font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   font-size: 18px;
-  line-height: 100%;
+  line-height: 1;
 
   border-top: 1px solid #FFFFFF;
   border-right: none;
@@ -131,13 +131,14 @@ ol {
   color: #FFFFFF;
   background-color: transparent;
   appearance: none;
+  min-width: 225px;
 }
 
 .search-form__textfield::placeholder {
   color: rgb(255 255 255 / 0.7);
   font-weight: 400;
   font-size: 18px;
-  line-height: 100%;
+  line-height: 1;
 }
 
 .search-form__textfield:focus {
@@ -232,7 +233,7 @@ ol {
   font-weight: 700;
   font-style: Bold;
   font-size: 75px;
-  line-height: 94%;
+  line-height: 0.94;
   text-transform: uppercase;
   color: #FFFFFF;
 ;
@@ -244,12 +245,13 @@ ol {
 }
 
 .content__list-container {
-  position: relative;
   height: 298px;
-  overflow: auto;
   display: flex;
   flex-direction: column;
   gap: 30px;
+  position: relative;
+  overflow: auto;
+  overflow-y: scroll;
 }
 
 .content__list {
@@ -307,7 +309,7 @@ ol {
   font-weight: 700;
   font-style: Bold;
   font-size: 30px;
-  line-height: 100%;
+  line-height: 1;
   text-transform: uppercase;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -332,5 +334,7 @@ ol {
 
 /*Стили для кнопок в общем прописаны рядом с 1 кнопокй*/
 .more-button {
-  width: 100%;
+  width: 390px;
+  margin-bottom: 3px;
+  align-self: center;
 }
